Fix vertical align for spinner

--- a/src/templates/styles/spinner.scss
+++ b/src/templates/styles/spinner.scss
@@ -1,7 +1,9 @@
 converse-spinner {
     &.vertically-centered {
-        height: 100%;
-        margin-top: 30%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%; /* Ensure the parent has a defined height */
     }
 }
 
